updated portfolio design

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Hi, I'm Rajuno! I'm learning web development and Git. This portfolio showcases my projects, including the About page from my quiz app.</p>
+        <p>Hi, I'm Rajuno! I'm learning web development and Git. This portfolio showcases my projects, including the About page from the quiz app am contributing to making.</p>
     </section>
 
     <section id="projects">
